# ExynosTools

./: CMakeLists.txt  README-build.txt  README.md  build_android_example.sh  build_clean.sh  generate_shader_header.cmake  normalize_and_validate_shaders.sh
.github/workflows/: build.yml  ci-build.yml
assets/shaders/src/: bc1.comp  bc2.comp  bc3.comp  bc4.comp  bc5.comp  bc6.comp  bc6h.comp  bc7.comp  bc_common.glsl
cmake/: add_projects_include.cmake  emit_spv_header.cmake  emit_spv_header.py  enable_xeno_globals.cmake  generate_shader_headers.cmake  spv_to_header.cmake
docs/: README.md
etc/exynostools/: performance_mode.conf
include/: bc1_shader.h  bc2.shader.h  bc2_shader.h  bc4_shader.h  bc5_shader.h  bc6h_shader.h  bc7_shader.h  bc_common_shader.h  bc_shader_fallback.h  hud.h  logging.h  rt_path.h  xclipse_wrapper.h  xeno_bc.h  xeno_log.h  xeno_wrapper.h
package_temp/etc/exynostools/: performance_mode.conf
package_temp/etc/exynostools/profiles/: default.env  driver_alias.conf  dxvk.conf  vkd3d.conf
package_temp/usr/share/: meta.json
profiles/winlator/: default.env  driver_alias.conf
scripts/: build_and_package.sh  generate_spv_headers.sh  prep_shaders.sh  spv_to_header.py
src/: app_profile.c  bc_emulate.c  bc_emulate.h  create_common_layouts_and_pipelines.c  detect.c  emulate.c  hud.c  logging.c  main.c  minimal_wrapper.c  rt_path.c  rt_path.h  selfcheck.c  shaders_embed_stub.c  xclipse_wrapper.c  xeno_log_stream.c  xeno_wrapper.c  xeno_wrapper.h  xeno_wrapper_stubs.c
src/drivers/xclipse/: async.c  vrs.c
src/misc/: minimal_wrapper.c
tests/: bc_test.c
